src/objects/SREC_ACP__c.object
<CustomObject>
    <fields>
        <fullName>Compliance_Year__c</fullName>
        <label>Compliance Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SREC_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SREC Market</label>
        <referenceTo>SREC_Market__c</referenceTo>
        <relationshipLabel>SREC ACPs</relationshipLabel>
        <relationshipName>SREC_ACPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>SREC ACP</label>
    <nameField>
        <label>SREC ACP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SREC ACPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>